--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
+
 {
+  "homepage": "https://thedekerone.github.io/NNews/",
   "name": "web-project",
   "version": "0.1.0",
   "private": true,
@@ -28,5 +30,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
   }
 }
