--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "homepage": "https://thedekerone.github.io/NNews/",
   "name": "web-project",
   "version": "0.1.0",
   "private": true,
-  "homepage": "link-to-your-repository",
+  "homepage": "https://thedekerone.github.io/news-react/",
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -12,11 +11,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+   "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
+
   },
   "eslintConfig": {
     "extends": "react-app"
