--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://ttalking.site/",
   "dependencies": {
+    "axios": "^0.18.0",
     "random-key": "^0.3.2",
     "react": "^16.8.6",
     "react-adsense": "0.0.6",
